--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t hello/frontend -f Dockerfile.dev
+  - docker build -t hello/frontend -f Dockerfile.dev .
 
 script:
-  - docker run hello/frontend npm run test
+  - docker run hello/frontend npm run test -- --coverage
