add travis deoply config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,20 @@ before_install:
 
 script:
   - docker run -e CI=true hello/frontend npm run test -- --coverage
+
+deploy:
+  provider: elasticbeantalk
+  region: "us-east-2"
+  app: "docker"
+  env: "Docker-env"
+  bucket_name: elasticbeanstalk-us-east-2-682547592010
+  bucket_path: "docker"
+
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
+    
+
+
