--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ deploy:
   on:
     branch: master
   access_key_id: AKIAZ52YBXNFACUQUV7V
-  secret_access_key:
-    secure: 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
+  secret_access_key: cShFkr3lM3zgJKGl5PlJsqzSiEig3+6r1a62AT2g
 
   
   #   access_key_id: $AWS_ACCESS_KEY
