--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ deploy:
 
   on:
     branch: master
-  access_key_id: AKIAZ52YBXNFNQ65A3NX
-  secret_access_key: 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
+  access_key_id: AKIAZ52YBXNFJ3RR4AHM
+  secret_access_key: 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
 
   
   #   access_key_id: $AWS_ACCESS_KEY
