--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ deploy:
 
   on:
     branch: master
-  access_key_id: AKIAZ52YBXNFJ3RR4AHM
-  secret_access_key: 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
+  access_key_id: AKIAZ52YBXNFFMGRKROE
+  secret_access_key: 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
 
   
   #   access_key_id: $AWS_ACCESS_KEY
@@ -28,5 +28,7 @@ deploy:
     
 
 
-  # access_key_id: AKIAZ52YBXNFFMGRKROE
-  # secret_access_key: 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
+
+
+  #   access_key_id: AKIAZ52YBXNFJ3RR4AHM
+  # secret_access_key: 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
