--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker"
-  env: "Docker-env"
+  env: "Docker-env-1"
   bucket_name: elasticbeanstalk-us-east-2-682547592010
   bucket_path: "docker"
 
