--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ deploy:
     branch: master
 
   access_key_id: AKIAZ52YBXNFJ3RR4AHM
-  secret_access_key: 
-    secure: "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"
+  secret_access_key: MS28VjruGOspLqrjmCTATNEaV+AmNTIbYE4YhwGF
 
   
   #   access_key_id: $AWS_ACCESS_KEY
