--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ deploy:
 
   access_key_id: AKIAZ52YBXNFJ3RR4AHM
   secret_access_key: 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
+  acl: public_read
 
   
   #   access_key_id: $AWS_ACCESS_KEY
