--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  edge: true
+  # edge: true
   # skip-cleanup: true
   region: "us-east-2"
   app: "Docker-test"
